<resources>
    <string name="app_name">SocialGift</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_menu_title">Search</string>
    <string name="profile_title">Profile</string>
    <string name="add_new_product">Add new product</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="app_logo_description">Social gift logo</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="messages">Messages</string>
    <string name="username">Username</string>
    <string name="shopping_bag_icon_description">Shopping Bag icon</string>
    <string name="item_name">Item Name</string>
    <string name="money_icon_decription">Money icon decription</string>
    <string name="_999_price">999€</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="gift">Gift</string>
    <string name="chats">Chats</string>
    <string name="search_a_user_or_a_product">Search a user or a product</string>
    <string name="shared_preferences">SocialGiftPreferences</string>
    <string name="saved_access_token_key">savedAccessToken</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="mail">mail@mail.es</string>
    <string name="back">Back</string>
    <string name="message_hint">Message...</string>
    <string name="users">Users</string>
    <string name="products">Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_description_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur vitae nunc sed velit dignissim sodales ut eu. Sed id semper risus in hendrerit gravida rutrum quisque non. Orci ac auctor augue mauris augue. Et netus et malesuada fames ac. Pellentesque id nibh tortor id aliquet. Aenean et tortor at risus viverra adipiscing at in. Sollicitudin ac orci phasellus egestas tellus. Et pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Luctus venenatis lectus magna fringilla urna porttitor rhoncus. Amet est placerat in egestas erat imperdiet sed. Dolor sit amet consectetur adipiscing elit. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Pharetra pharetra massa massa ultricies mi quis. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Velit laoreet id donec ultrices tincidunt arcu non. Commodo quis imperdiet massa tincidunt nunc pulvinar. Accumsan tortor posuere ac ut consequat semper viverra nam. Non tellus orci ac auctor augue mauris augue. Lobortis mattis aliquam faucibus purus in.

Gravida dictum fusce ut placerat. Maecenas sed enim ut sem viverra aliquet. Cras sed felis eget velit aliquet sagittis id. Tristique senectus et netus et. Lectus magna fringilla urna porttitor rhoncus. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum. Morbi tempus iaculis urna id volutpat lacus laoreet non. Magna eget est lorem ipsum. Ut faucibus pulvinar elementum integer. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Mi bibendum neque egestas congue.</string>
    <string name="product_category">Product category</string>
    <string name="product_image">Product image</string>
    <string name="description">Description</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="create_wishlist">Create Wishlist</string>
    <string name="wishlist_details">Wishlist Details</string>
    <string name="create">Create</string>
    <string name="upload_gift">Upload Gift</string>
    <string name="gift_details">Gift Details</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="search_for_a_friend">Search for a friend</string>
    <string name="go_back">Go back</string>
    <string name="mail_email_es">mail@email.es</string>
    <string name="accept_request">Accept request</string>
    <string name="decline_request">Decline request</string>
    <string name="user_icon">User icon</string>
    <string name="email_icon">Email icon</string>
    <string name="modify_photo">Modify photo</string>
    <string name="profile_details">Profile details</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="options">Options</string>
    <string name="saved_user_id_key">savedUserID</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="remove_friend">Remove friend</string>
    <string name="wishlist_name">Wishlist Name</string>
    <string name="delete_wishlist">Delete wishlist</string>
    <string name="item_link">Item Link</string>
    <string name="profile_picture_link">Profile picture link</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="wishlists">Wishlists</string>
    <string name="number_of_products_12">Number of products: 12</string>
    <string name="end_date_12_6_2023">End date: 12/6/2023</string>
    <string name="friend_message">Friend Message</string>
    <string name="user_message">User Message</string>
</resources>