<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/product_product_card_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/product_image"
                    android:contentDescription="@string/product_image" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/product_top_buttons_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/product_back_fab"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignStart="@id/product_product_card_view"
                android:layout_alignTop="@id/product_product_card_view"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/button_background"
                android:contentDescription="@string/back"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back"
                app:borderWidth="0dp"
                app:fabCustomSize="70dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/product_add_to_wishlist_fab"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignTop="@id/product_product_card_view"
                android:layout_alignEnd="@id/product_product_card_view"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/button_background"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_add_wishlist"
                app:borderWidth="0dp"
                app:fabCustomSize="70dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/products"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_999_price"
            android:textColor="@color/primary_yellow"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/product_category"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/product_description_lorem"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>