<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".ui.fragments.messages.MessagesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/ic_app_logo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/chats"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messages_search_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:autofillHints="text"
            android:background="@drawable/custom_input_dialog"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/search_for_a_friend"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/messages_search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/search_a_user_or_a_product"
            android:src="@drawable/ic_search"
            app:fabCustomSize="50dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/messages_new_chat_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/start_new_chat"
            android:src="@drawable/ic_baseline_add"
            app:fabCustomSize="50dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/messages_user_card" />


</LinearLayout>