<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_wishlist_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/wishlist_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_wishlist_card_number_of_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/number_of_products_12"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_wishlist_card_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/end_date_12_6_2023"
            android:textSize="18sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tertiary"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/user_wishlist_card_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:text="@string/product_description_lorem"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>