<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.views.ProductActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/product_product_card_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/user_profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop"
                android:src="@drawable/product_image" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/product_top_buttons_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/user_profile_back_fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@id/product_product_card_view"
            android:layout_alignTop="@id/product_product_card_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_profile_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/mail_email_es"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/wishlists"
        android:textColor="@color/primary_yellow"
        android:textSize="25sp"
        android:textStyle="bold" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/user_profile_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
       />


</LinearLayout>