<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_edit_fab"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/edit_profile"
            android:scaleType="center"
            android:src="@drawable/ic_edit_pencil"
            app:borderWidth="0dp"
            app:fabCustomSize="70dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_settings_fab"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            app:borderWidth="0dp"
            app:fabCustomSize="70dp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_card_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/username"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/mail"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.viewpager.widget.ViewPager>




</LinearLayout>